--- a/ymir/img-man/training-template.yaml
+++ b/ymir/img-man/training-template.yaml
@@ -1,1 +1,5 @@
-config: config/nanodet-plus-m_416.yml
+config_file: config/nanodet-plus-m_416.yml
+epochs: 100
+learning_rate: -1
+batch_size_per_gpu: 16
+workers_per_gpu: 16
