--- a/ymir/img-man/training-template.yaml
+++ b/ymir/img-man/training-template.yaml
@@ -1,6 +1,7 @@
 config_file: config/nanodet-plus-m_416.yml
 epochs: 100
-learning_rate: -1
+input_size: -1 # use -1 to use the default input size
+learning_rate: -1  # use -1 to use default learning rate in config file
 batch_size_per_gpu: 16
 workers_per_gpu: 16
 resume: False
