--- a/ymir/img-man/training-template.yaml
+++ b/ymir/img-man/training-template.yaml
@@ -1,8 +1,10 @@
 config_file: config/nanodet-plus-m_416.yml
 epochs: 100
-input_size: -1 # use -1 to use the default input size
+input_size: -1  # use -1 to use the default input size
 learning_rate: -1  # use -1 to use default learning rate in config file
 batch_size_per_gpu: 16
 workers_per_gpu: 4
 resume: False
 load_from: ''
+ddp_debug: False  # debug for ddp training
+profile: False  # profile model
