--- a/ymir/img-man/training-template.yaml
+++ b/ymir/img-man/training-template.yaml
@@ -5,7 +5,7 @@ learning_rate: -1  # use -1 to use default learning rate in config file
 batch_size_per_gpu: 16
 workers_per_gpu: 4
 resume: False
-shm-size: 128G
+shm_size: 128G
 load_from: '/weights/nanodet-plus-m-1.5x_416.pth'
 ddp_debug: False  # debug for ddp training
 profiler: False  # profile model
