--- a/ymir/img-man/training-template.yaml
+++ b/ymir/img-man/training-template.yaml
@@ -6,8 +6,8 @@ batch_size_per_gpu: 16
 workers_per_gpu: 4
 resume: False
 load_from: ''
-ddp_debug: False  # debug for ddp training
-profiler: False  # profile model
+# ddp_debug: False  # debug for ddp training
+# profiler: False  # profile model
 shm_size: 128G
 export_format: 'ark:raw'
 ymir_saved_file_patterns: 'model_last.ckpt, model_best.ckpt, nanodet_model_best.pth, .*.json, .*.yaml, .*.yml'
